1. Breadcrumbs fix 2. Russian lang 3. Clickable tarrifs 4. Text is wrapped by <p> 5. Fixed container width 6. Dropdown is't clickable 7. New layout of mane page 8. New layout of comments page 9. Other small fixes

--- a/components/footer.css
+++ b/components/footer.css
@@ -9,7 +9,7 @@
 
 .footer__col {
     float: left;
-    width: 33%;
+    width: 33.3%;
 }
 
 .footer__copyrigth {
